--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@studio-freight/react-lenis": "^0.0.47",
     "@types/three": "^0.182.0",
     "gsap": "^3.14.2",
+    "lightningcss-linux-x64-gnu": "^1.31.1",
     "lucide-react": "^0.563.0",
     "next": "^16.1.6",
     "react": "19.0.0",
